# metalrender

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  apply_namespace.py  compile.sh  dxc_to_mtl.sh  dxc_to_spv.sh  ignore.md  output.txt
apps/engine_scene_smoke/: CMakeLists.txt  main.cpp
apps/metalrender/: App.cpp  App.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  DebugSceneAuthoringLayer.cpp  DebugSceneAuthoringLayer.hpp  FpsCameraController.cpp  FpsCameraController.hpp  main.cpp
apps/vktest/: CMakeLists.txt  DemoSceneEcsBridge.cpp  DemoSceneEcsBridge.hpp  MeshletRendererTestScene.cpp  MeshletRendererTestScene.hpp  TestApp.cpp  TestApp.hpp  TestDebugScenes.cpp  TestDebugScenes.hpp  TestRenderer.cpp  TestRenderer.hpp  main.cpp
apps/vktest/scenes/: MeshletCsmRenderer.cpp  MeshletCsmRenderer.hpp  MeshletDepthPyramid.cpp  MeshletDrawPrep.cpp  MeshletRendererTestScene.cpp  MeshletRendererTestScene.hpp  MeshletTestRenderUtil.cpp  MeshletTestRenderUtil.hpp
src/: App.cpp  App.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  ResourceManager.cpp  ResourceManager.hpp  UI.cpp  UI.hpp  Window.cpp  Window.hpp  WindowApple.cpp  WindowApple.hpp  main.cpp
src/core/: Allocator.hpp  BitUtil.hpp  CVar.cpp  CVar.hpp  ComponentRegistry.cpp  ComponentRegistry.hpp  Config.hpp  Console.cpp  Console.hpp  Diagnostic.cpp  Diagnostic.hpp  EAssert.hpp  FileUtil.cpp  FileUtil.hpp  Handle.hpp  Hash.hpp  Logger.hpp  Math.hpp  MathUtil.hpp  Pool.hpp  Result.hpp  StringUtil.cpp  StringUtil.hpp  ThreadPool.hpp  TomlUtil.hpp  Util.cpp  Util.hpp
src/editor/: EditorDocumentController.cpp  EditorDocumentController.hpp  EditorLayer.cpp  EditorLayer.hpp  EditorSession.cpp  EditorSession.hpp  EditorViewportCamera.cpp  EditorViewportCamera.hpp  EditorViewportTarget.cpp  EditorViewportTarget.hpp
src/editor/panels/: HierarchyPanel.cpp  HierarchyPanel.hpp
src/engine/: Engine.cpp  Engine.hpp  ImGuiOverlayLayer.cpp  ImGuiOverlayLayer.hpp  Input.hpp  RuntimeLink.cpp
src/engine/assets/: AssetDatabase.cpp  AssetDatabase.hpp  AssetRegistry.cpp  AssetRegistry.hpp  AssetService.cpp  AssetService.hpp
src/engine/content/: BinaryReader.cpp  BinaryReader.hpp  BinaryWriter.cpp  BinaryWriter.hpp  CookedArtifact.cpp  CookedArtifact.hpp
src/engine/render/: DebugClearRenderer.cpp  DebugClearRenderer.hpp  IRenderer.hpp  RenderFrameContext.hpp  RenderScene.cpp  RenderScene.hpp  RenderSceneExtractor.cpp  RenderSceneExtractor.hpp  RenderService.cpp  RenderService.hpp
src/engine/scene/: BuiltInComponentSerialization.cpp  BuiltinComponentSerialization.hpp  ComponentReflectionMacros.hpp  ComponentRegistry.cpp  ComponentRegistry.hpp  ComponentRuntimeReflection.cpp  ComponentRuntimeReflection.hpp  ComponentSchema.cpp  ComponentSchemaJson.hpp  CoreComponentRegistrar.cpp  CoreComponentRegistrar.hpp  Scene.cpp  Scene.hpp  SceneAssetLoader.cpp  SceneAssetLoader.hpp  SceneComponentContext.cpp  SceneComponentContext.hpp  SceneComponents.cpp  SceneComponents.hpp  SceneCooked.cpp  SceneCooked.hpp  SceneIds.cpp  SceneIds.hpp  SceneManager.cpp  SceneManager.hpp  SceneSerialization.cpp  SceneSerialization.hpp  SceneSerializationContext.cpp  SceneSerializationContext.hpp  SceneSmokeTest.cpp  SceneSmokeTest.hpp  SceneValidate.cpp
src/gfx/: BackedGPUAllocator.cpp  BackedGPUAllocator.hpp  Buffer.hpp  CmdEncoder.hpp  Config.hpp  Device.cpp  Device.hpp  DeviceMetal.cpp  DeviceMetal.hpp  DrawBatch.cpp  DrawBatch.hpp  GFXTypes.hpp  GPUFrameAllocator.cpp  GPUFrameAllocator.hpp  GPUFrameAllocator2.cpp  GPUFrameAllocator2.hpp  ImGuiRenderer.cpp  ImGuiRenderer.hpp  MemeRenderer123.cpp  MemeRenderer123.hpp  ModelGPUManager.cpp  ModelGPUManager.hpp  ModelInstance.cpp  ModelInstance.hpp  ModelLoader.cpp  ModelLoader.hpp  Pipeline.cpp  Pipeline.hpp  PipelineManager.hpp  RenderGraph.Bake.cpp  RenderGraph.DebugDump.cpp  RenderGraph.Format.cpp  RenderGraph.Format.hpp  RenderGraph.cpp  RenderGraph.hpp  RendererMetal.cpp  RendererMetal.hpp  RendererMetal4.cpp  RendererMetal4.hpp  RendererTypes.hpp  (+7 more)
src/gfx/metal/: BackedGPUAllocator.hpp  Config.hpp  GPUAllocator.hpp  Metal3CmdEncoder.cpp  Metal3CmdEncoder.hpp  MetalBuffer.cpp  MetalBuffer.hpp  MetalCmdEncoder.cpp  MetalCmdEncoder.hpp  MetalCmdEncoderCommon.hpp  MetalCmdEncoderICBMgr.cpp  MetalCmdEncoderICBMgr.hpp  MetalCpp.cpp  MetalDevice.cpp  MetalDevice.hpp  MetalIRRuntime.cpp  MetalPipeline.hpp  MetalQueryPool.hpp  MetalRootLayout.hpp  MetalSampler.hpp  MetalSemaphore.hpp  MetalSwapchain.hpp  MetalTexture.hpp  MetalUtil.cpp  MetalUtil.hpp  MetalWindow.cpp  RootLayout.hpp
src/gfx/renderer/: AlphaMaskType.hpp  BufferResize.cpp  (+28 more)
src/shader_compiler/: ShaderCompiler.cpp  ShaderCompiler.hpp
src/util/: FuzzyMatch.cpp  FuzzyMatch.hpp  SmallVector.hpp  Stats.cpp  Stats.hpp  Timer.hpp
src/voxels/: Chunk.cpp  Chunk.hpp  Mesher.cpp  Mesher.hpp  TerrainGenerator.cpp  TerrainGenerator.hpp  Types.hpp  VoxelDB.cpp  VoxelDB.hpp  VoxelRenderer.cpp  VoxelRenderer.hpp  VoxelWorld.cpp  VoxelWorld.hpp
tests/: CMakeLists.txt
tests/core/: ComponentRegistryTests.cpp  DiagnosticTests.cpp
tests/reflect_fixtures/: ReflectEnumAndPolicyFixture.hpp  ReflectScalarAndAssetFixture.hpp  run_invalid_reflect_codegen.py
tests/smoke/: AssetDatabaseSmokeTest.cpp  AssetDatabaseSmokeTest.hpp  AssetRegistrySmokeTest.cpp  AssetRegistrySmokeTest.hpp  AssetServiceSmokeTest.cpp  AssetServiceSmokeTest.hpp  DemoSceneAuthoringSmokeTest.cpp  DemoSceneAuthoringSmokeTest.hpp  EditorSessionTests.cpp  GeneratedSceneAssetsSmokeTest.cpp  GeneratedSceneAssetsSmokeTest.hpp  SceneAssetLoaderSmokeTest.cpp  SceneAssetLoaderSmokeTest.hpp  SceneAuthoringTests.cpp  SceneComponentContextTests.cpp  SceneCookedTests.cpp  SceneSerializationSmokeTest.cpp  SceneSerializationSmokeTest.hpp  SceneSerializationValidationTests.cpp  SceneSmokeTest.cpp  TestExtensionComponent.cpp  TestExtensionComponent.hpp  TestHelpers.cpp  TestHelpers.hpp  TestModuleExtensionTests.cpp
tools/component_codegen/: CMakeLists.txt  ComponentCodegen.cpp  ComponentCodegenUtil.cpp  ComponentCodegenUtil.hpp
(+260 files in other folders)
